# test-chat

./: .dockerignore  .gitignore  Dockerfile  README.md  __main__.py  pyproject.toml  tz.md
src/: application.py  chat_manager.py  connection_manager.py  exceptions.py  schemas.py
static/: index.html
