[tool.poetry]
name = "test-chat"
version = "0.1.0"
description = "Simple websocket chat"
authors = ["Raphael Golubev <raphael.golubev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
